--- a/StandardAlgorithms.xcodeproj/xcshareddata/xcbaselines/8C90AB8C2371923500A1AB4D.xcbaseline/Info.plist
+++ b/StandardAlgorithms.xcodeproj/xcshareddata/xcbaselines/8C90AB8C2371923500A1AB4D.xcbaseline/Info.plist
@@ -4,6 +4,30 @@
 <dict>
 	<key>runDestinationsByUUID</key>
 	<dict>
+		<key>32243158-54F0-4FCC-BE91-84C5D7E64055</key>
+		<dict>
+			<key>localComputer</key>
+			<dict>
+				<key>busSpeedInMHz</key>
+				<integer>400</integer>
+				<key>cpuCount</key>
+				<integer>1</integer>
+				<key>cpuKind</key>
+				<string>Quad-Core Intel Core i5</string>
+				<key>cpuSpeedInMHz</key>
+				<integer>1400</integer>
+				<key>logicalCPUCoresPerPackage</key>
+				<integer>8</integer>
+				<key>modelCode</key>
+				<string>MacBookPro15,4</string>
+				<key>physicalCPUCoresPerPackage</key>
+				<integer>4</integer>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.macosx</string>
+			</dict>
+			<key>targetArchitecture</key>
+			<string>x86_64</string>
+		</dict>
 		<key>C7F396F4-8C44-4E1A-99B8-DEA5B74561A8</key>
 		<dict>
 			<key>localComputer</key>
